# coles_vs_woolies

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  pyproject.toml  requirements.txt  shopping-list.example.json  shopping-list.example.txt
.github/workflows/: run.yml  test.yml
coles_vs_woolies/: __init__.py  __main__.py  examples.py  main.py  search.py
coles_vs_woolies/emailing/: generate.py  mailer_send.py
coles_vs_woolies/emailing/templates/: weekly.html
coles_vs_woolies/emailing/templates/old/: rich_template.html
coles_vs_woolies/emailing/templates/snippets/: table.html  table_row.html
coles_vs_woolies/emails/: __init__.py  emails.py
coles_vs_woolies/emails/providers/: __init__.py  mailer_send.py
coles_vs_woolies/emails/templates/: __init__.py  main.py  weekly.html
coles_vs_woolies/emails/templates/snippets/: table.html  table_row.html
coles_vs_woolies/merchants/: __init__.py  base.py  coles.py  iga.py  woolworths.py
coles_vs_woolies/search/: __init__.py  coles.py  iga.py  scraperbox.py  session.py  shop_coles.py  similarity.py  types.py  woolies.py
coles_vs_woolies/search/merchant/: coles.py  iga.py  woolies.py
coles_vs_woolies/utils/: display.py  session.py  similarity.py  wednesday.py
tests/: conftest.py  test_emailing.py  test_search.py
tests/integration/: test_search.py
tests/unit/: .gitignore  test_search.py
tests/unit/fixtures/Cadbury-Dairy-Milk-Chocolate-Block-180g/: coles.json  iga.json  woolworths.json
