[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "coles_vs_woolies"
version = "2.0.0"
description = "Compare & be notified of the best offers of your favourite items from Aussie grocers ðŸ¦˜ðŸŒ"
readme = { file = "README.txt", content-type = "text/markdown" }
requires-python = ">=3.11"
license = { file = "LICENSE" }
keywords = ["coles", "woolies", "woolworths", "colesworth", "iga"]
authors = [{ name = "Matthew Timms", email = "matthewtimms@live.com.au" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "arrow==1.3.0",
    "beautifulsoup4==4.12.3",
    "mailersend==0.5.6",
    "pandas==2.2.1",
    "platformdirs==4.2.0",
    "pydantic[email]==2.6.3",
    "python-dateutil==2.9.0",
    "python-dotenv==1.0.1",
    "rich==13.7.1",
    "requests==2.31.0",
    "requests-cache==1.2.0"
]
[project.optional-dependencies]
dev = [
    "pre-commit==3.6.2",
    "ruff==0.3.0",
    "matplotlib",
]
testing = [
    "pytest==8.0.2",
    "pytest-randomly==3.15.0"
]

[project.urls]
homepage = "https://github.com/MattTimms/coles_vs_woolies"
documentation = "https://github.com/MattTimms/coles_vs_woolies/blob/main/README.md"
repository = "https://github.com/MattTimms/coles_vs_woolies"
changelog = "https://github.com/MattTimms/coles_vs_woolies/blob/main/CHANGELOG.md"

[tool.setuptools.package-data]
"*" = ["*.html"]

[project.scripts]
coles_vs_woolies = "coles_vs_woolies.__main__:cli"

[tool.ruff]
line-length = 120
target-version = "py311"
[tool.ruff.lint]
select = ["E", "F", "I", "RUF"]

[tool.pytest.ini_options]
addopts = "-ra -vv"
testpaths = ["tests/unit"]
